# Wali_Robot

./: readme.md  使用前阅读.txt  机器人模块及消息.docx
devel/: .catkin  _setup_util.py  setup.sh
devel/include/yidamsg/: AHRS_data.h  CameraChange.h  CameraChangeRequest.h  CameraChangeResponse.h  CameraControl.h  CameraControlRequest.h  CameraControlResponse.h  CaptureImage.h  ControlDoor.h  ControlDoorRequest.h  ControlDoorResponse.h  ControlMode.h  DBTableUpdate.h  DemoResult.h  Detect_Result.h  Flirone.h  FlironeRequest.h  FlironeResponse.h  GPS_data.h  GetBattery.h  GetBatteryRequest.h  GetBatteryResponse.h  GoHouse.h  GoHouseRequest.h  GoHouseResponse.h  ImageTest.h  Image_ID.h  Image_data.h  Image_road.h  InspectedImage.h  InspectedResult.h  InspectedResultWeb.h  LiveImage.h  Log.h  MonitorPoint.h  Object_Recognition.h  Object_RecognitionRequest.h  Object_RecognitionResponse.h  Observe.h  ObserveRequest.h  (+65 more)
devel/lib/camera/: capture
devel/lib/pkgconfig/: camera.pc  robot_play.pc  robot_voice.pc  robot_wake.pc  webcam.pc  yidamsg.pc
devel/lib/robot_play/: robot_play
devel/lib/robot_voice/: iat_publish  tts_subscribe
devel/lib/webcam/: webcam_node
src/robot_play/: CMakeLists.txt  package.xml
src/robot_play/src/: robot_play.cpp
src/robot_voice/: CMakeLists.txt
src/robot_wake/: CMakeLists.txt  package.xml  speech.py
src/webcam/: CMakeLists.txt  CMakeLists.txt~  Device.ini~  package.xml~  test.sh~  test1.sh~  usb摄像头
src/webcam/launch/: webcam.launch  webcam_py.launch
src/webcam/src/: camsend.py  main.cpp  webcam.py
src/yidamsg/: CMakeLists.txt  CMakeLists.txt~
(+661 files in other folders)
